<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    app:layout_anchorGravity="center"
    tools:context=".AddProduct">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/delius_swash_caps"
        android:text="@string/lblAddProd"
        android:textAlignment="center"
        android:textColor="@color/shopit_red"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/delius_swash_caps"
            android:text="@string/lblSelImage"
            android:textAlignment="center"
            android:textColor="@color/shopit_red"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOpenFile"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_cream_round"
            android:text="@string/btnSelImg"
            android:textColor="@color/shopit_red" />

        <ImageView
            android:id="@+id/imgPrevProd"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/delius_swash_caps"
            android:text="@string/lblProdName"
            android:textAlignment="center"
            android:textColor="@color/shopit_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtAddProdName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/delius_swash_caps"
            android:text="@string/lblDescripcion"
            android:textAlignment="center"
            android:textColor="@color/shopit_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtAddProdDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/delius_swash_caps"
            android:text="@string/lblProdSku"
            android:textAlignment="center"
            android:textColor="@color/shopit_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtAddProdSku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/delius_swash_caps"
            android:text="@string/lblProdCat"
            android:textAlignment="center"
            android:textColor="@color/shopit_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtAddProdCat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/delius_swash_caps"
            android:text="@string/lblProdPrice"
            android:textAlignment="center"
            android:textColor="@color/shopit_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtAddProdPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/delius_swash_caps"
            android:text="@string/lblProdStock"
            android:textAlignment="center"
            android:textColor="@color/shopit_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtAddProdStock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateProduct"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/delius_swash_caps"
        android:textColor="@color/shopit_red"
        android:background="@drawable/bg_cream_round"
        android:layout_margin="12dp"
        android:text="@string/btnAddProd" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/addProd_loading_indicator"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_margin="4dp"
        android:visibility="gone"
        app:lottie_rawRes="@raw/shopit_loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

</LinearLayout>