<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/ds_logo"
        app:srcCompat="@drawable/logo_transparent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/delius_swash_caps"
        android:gravity="center"
        android:text="@string/lblLogin"
        android:textAllCaps="false"
        android:textColor="@color/shopit_red"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="3"
            android:text="@string/lblEmail"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtLogEmail"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/shopit_red"
            android:textColorLink="@color/shopit_red"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="3"
            android:text="@string/lblPwd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtLogPwd"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorHighlight="@color/shopit_red"
            android:textColorLink="@color/shopit_red"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSendRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/delius_swash_caps"
        android:text="@string/btnSendRegister"
        android:textColor="@color/shopit_red"
        android:textSize="12sp"
        app:rippleColor="@color/shopit_cream" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"

        android:layout_margin="4dp"
        android:background="@drawable/bg_cream"
        android:fontFamily="@font/delius_swash_caps"
        android:text="@string/btnLogin"
        android:textColor="@color/shopit_red"
        app:rippleColor="@color/shopit_cream" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_loading_indicator"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_margin="4dp"
        android:visibility="gone"
        app:lottie_rawRes="@raw/shopit_loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

</LinearLayout>