<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Profile"
    >

    <LinearLayout
        android:id="@+id/lyProfileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/delius_swash_caps"
            android:text="@string/lblProfile"
            android:textAlignment="center"
            android:textColor="@color/shopit_red"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/lblName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lblProfileName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="3"
                android:fontFamily="@font/delius_swash_caps"
                android:text="TextView"
                android:textAlignment="viewStart"
                android:textColor="@color/shopit_red"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/lblEmail"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lblProfileEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="3"
                android:fontFamily="@font/delius_swash_caps"
                android:text="TextView"
                android:textAlignment="viewStart"
                android:textColor="@color/shopit_red"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/lblPhone"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lblProfilePhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="3"
                android:fontFamily="@font/delius_swash_caps"
                android:text="TextView"
                android:textAlignment="viewStart"
                android:textColor="@color/shopit_red"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/lblGender"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lblProfileGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="3"
                android:fontFamily="@font/delius_swash_caps"
                android:text="TextView"
                android:textAlignment="viewStart"
                android:textColor="@color/shopit_red"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/delius_swash_caps"
            android:text="@string/btnLogout"
            android:textColor="@color/shopit_red"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyProfilePurchases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/delius_swash_caps"
            android:text="@string/lblProfilePurchases"
            android:textAlignment="center"
            android:textColor="@color/shopit_red"
            android:textSize="22sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvProfilePurchases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/profile_loading_indicator"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:visibility="visible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/shopit_loading"
        tools:visibility="visible" />

</LinearLayout>